# u-boot

./: .gitattributes  .gitignore  Android.bp  BUILD.bazel  Kconfig  METADATA  Makefile  Makefile.host_arch  OWNERS  README  arm.fragment  avb_locked.fragment  avb_unlocked.fragment  bazel.WORKSPACE  bl31.elf  build.config.aarch64  build.config.arm  build.config.beagle_x15  build.config.common  build.config.constants  build.config.crosvm.aarch64  build.config.crosvm.x86_64  build.config.crosvm_locked.aarch64  build.config.crosvm_locked.x86_64  build.config.gem5.aarch64  build.config.kiwi  build.config.kiwi_l  build.config.kiwi_p  build.config.pvmfw  build.config.qemu.aarch64  build.config.qemu.arm  build.config.qemu.riscv64  build.config.qemu.x86_64  build.config.riscv64  build.config.rockpi4  build.config.tools  build.config.x86_64  build.config.xen-guest-android-virtio.aarch64  build_rk3399_bl31.sh  crosvm-aarch64.fragment  (+16 more)
arch/arm/: Kconfig  Makefile  config.mk
arch/arm/cpu/: u-boot.lds
arch/arm/dts/: Makefile  OWNERS  pvmfw.dts  xenguest-android-arm64.dts
arch/arm/lib/: cache.c  interrupts_64.c
arch/arm/mach-pvmfw/: Kconfig  cpu.c
arch/arm/mach-qemu/: Kconfig
arch/riscv/: config.mk
arch/riscv/cpu/: cpu.c
arch/x86/: Kconfig  config.mk
arch/x86/cpu/: lapic.c  u-boot.lds
boot/: Kconfig  Makefile  android_ab.c  android_bootloader.c  android_bootloader_keymint.c  image-android.c  image-board.c  image-fdt.c
cmd/: Kconfig  Makefile  ab_select.c  abootimg.c  avb.c  bcb.c  boot_android.c  nvedit.c
common/: Kconfig  Kconfig.boot  Makefile  android_ab.c  android_bootloader.c  avb_verify.c  bcc.c  board_r.c  cli.c  image-android.c  image-fdt.c  image.c  main.c  vm_instance.c
common/init/: board_init.c
configs/: am57xx_evm_defconfig  cf-x86_defconfig  rock-pi-4-rk3399_defconfig  xenguest_android_arm64_defconfig  xenguest_arm64_android_defconfig
disk/: part.c
drivers/: Kconfig  Makefile
drivers/core/: root.c
drivers/fastboot/: fb_mmc.c
drivers/firmware/: Kconfig  Makefile  kvm-hyp-services.c  psci.c
drivers/misc/: Kconfig
drivers/mmc/: rockchip_sdhci.c
drivers/pci/: Kconfig  pci-uclass.c  pci_auto.c  pcie_ecam_generic.c
drivers/reserved-mem/: Kconfig  Makefile  dice.c
drivers/rng/: Kconfig  Makefile  smccc_trng.c
drivers/serial/: ns16550.c
drivers/virtio/: Kconfig  Makefile  virtio-uclass.c  virtio_console.c  virtio_pci_modern.c  virtio_ring.c
env/: Kconfig  Makefile  env.c  raw_disk.c
examples/standalone/: Makefile  stubs.c
include/: android_ab.h  android_bootloader.h  android_bootloader_keymint.h  android_image.h  avb_verify.h  bcc.h  cli.h  env_internal.h  image.h  libfdt.h  libfdt_env.h  libfdt_internal.h  linker_lists.h  log.h  part.h  pci.h  spl.h  virtio.h  virtio_ring.h
include/configs/: pvmfw-arm64.h  qemu-arm.h  qemu-riscv.h  qemu-x86.h  rk3399_common.h  rockchip-common.h  x86-common.h  xenguest_android_arm64.h  xenguest_arm64.h  xenguest_arm64_android.h
include/dm/: uclass-id.h
include/linux/: arm-smccc.h  libfdt.h
lib/: Kconfig  Makefile  fdtdec.c  vsprintf.c
lib/boringssl/: Makefile  err.c  mem.c  rand.c  src
lib/libavb/: avb_hashtree_descriptor.h  avb_slot_verify.c  avb_slot_verify.h
lib/libfdt/: acpi.c
lib/libxbc/: COPYING  libxbc.c  libxbc.h
lib/open-dice/: Makefile
prebuilt-intermediates/: fdt_region.h
prebuilt-intermediates/linux/: compiler_types.h
scripts/: Makefile.lib  config_whitelist.txt
scripts/dtc/: Makefile  libfdt  update-dtc-source.sh
tools/: Makefile  fit_image.c  image-host.c
tools/libfdt/: acpi.c
(+54 files in other folders)
